themes/portzero/static/css/style.css
## Import Fonts
/* fira-sans-300 - latin */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/fira-sans-v8-latin-300.eot'); /* IE9 Compat Modes */
  src: local('Fira Sans Light'), local('FiraSans-Light'),
       url('../fonts/fira-sans-v8-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/fira-sans-v8-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/fira-sans-v8-latin-300.woff') format('woff'), /* Modern Browsers */
       url('../fonts/fira-sans-v8-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/fira-sans-v8-latin-300.svg#FiraSans') format('svg'); /* Legacy iOS */
}
/* fira-sans-regular - latin */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/fira-sans-v8-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Fira Sans Regular'), local('FiraSans-Regular'),
       url('../fonts/fira-sans-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/fira-sans-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/fira-sans-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/fira-sans-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/fira-sans-v8-latin-regular.svg#FiraSans') format('svg'); /* Legacy iOS */
}


## Style

html, body {
  min-height: 100%;
  margin: 0;
}

h1, h2, h3, h4 {
  margin: 10px 0 5px 0;
}

p {
  margin: 8px 0 3px 0;
}

.nomargin {
	margin: 0 0 0 0;
}

a {
  text-decoration: none;
  /*color: #0099cc;*/
  color: #0d96d5;
  border-bottom: 2px solid transparent;
  display: inline-block;
}

a:hover {
  color: #006080;
  border-bottom: 2px solid #004c66;
}

hr {
    border: none;
    border-bottom: 1px solid #0d96d5;
}

.sidebar {
  float: left;
  width: 33%;
  max-width: 200px;
 /* border-right: 1px solid #09C; */
  margin-right: 20px;
  padding-right: 20px;
}

.sidebar .menu {
  padding: 0 14px 0 14px;
  text-align: right;
}

.sidebar .menu li {
  color: #0099cc;
}

.sidebar .menu .active {
    color: black; 
}

.sidebar .menu .active a, .sidebar .active {
  color: black;
}

.sidebar .menu .active a:hover {
  text-decoration: none;
}

.sidebar .menu h3 {
  margin: 0;
}

.sidebar .menu ul {
  margin: 0;
  padding: 0;
  margin-bottom: 10px;
}

.sidebar .menu ul li {
  list-style: none;
}

.sidebar .menu .main-menu {
  margin-bottom: 8px;
}

.sidebar .menu .sub-menu {
  margin-left: 0px;
  margin-bottom: 8px;
  font-size: 0.8em;
}

.sidebar .menu .menu_language {
  display: inline-flex;
  font-size: 0.8em;
}

.sidebar .menu .menu_language ul li {
  display: inline;
}

.sidebar .menu_main {
}

.sidebar .menu .menu_social {
  font-size: 0.8em;
}

.sidebar .menu .menu_social ul li {
  display: inline;
}

.content {
  max-width: 900px;
  min-width: 650px;
  margin: auto;
  font-family: "Fira Sans";
  min-height: 100%;
  position: relative;
  padding-bottom: 150px;
  margin-top: 35px;
}

.logo_a {
  display: none;
  text-align: center;
  width: 100%;
}

.logo_a:hover {
  border: none;
}

.logo_a h1 {
  color: black;
  margin: -5px 0 0 18px;
  text-transform: uppercase;
  font-size: 2em;
}

.logo {
  width: 100%;
  padding: 0px 0px 5px 22px;
  max-width: 180px;
}

.mobile_footer {
  display: none;
}

.copyright {
  margin-right: 14px;
  font-size: 12px;
  text-align: right;
}


.text {
  font-size: 0.92em;
  padding-left: 20px;
  margin-left: 220px;
  hyphens: auto;
}

.text ul {
  margin-top: 0px;
}

.tagline {
  font-weight: 400;
  font-size: 26px;
  margin: 5px 0 5px 0;
}

.smallline {
  font-size: 20px;
  margin-bottom: -10px;
}

.footer {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  border-top: 1px solid #0d96d5;
  bottom: 10px;
}

.footer-section {
  border-left: 1px solid #0d96d5;
  padding: 0.5em;
  margin: 1em;
}

.footer-section h3 {
  color: #0d96d5;
  margin-bottom: 0.2em;
  margin-top: 0;
}

.footer-section ul {
  margin: 0;
  padding-left: 0.1em;
  list-style: none;
}

.footer-section li a {
  border-bottom: 0;
}

.imprint-legalese {
  max-width: 700px;
  max-height: 400px;
  overflow: scroll;
}

.imprint-section {
  margin-top: 1em;
  margin-bottom: 1em;
}

.imprint-section p {
  margin: 0;
}

.img-link {
  display: inline-block;
}

.small-logo {
  margin-top: 1em;
  width: 20px;
  display: inline-block;
}

.img-header {
  display: inline-block;
  margin: 0;
  padding-left: 1em;
  vertical-align: super;
}

.job-item {
  display: block;
  height: auto;
}

.teammember {
  border-bottom: 1px solid #0d96d5;
  padding: 5px;
  width: 100%;
  margin-top: 10px;
  display: inline-block;
  clear: left;
}

.team article:last-child {
  border: none;
}

.teammember-image {
  max-width: 135px;
  float: left;
  margin-right: 10px;
  margin-bottom: 5px;
  display: inline-block;
}

.teammember .position {
  font-weight: bold;
  font-size: 0.9em;
  margin-bottom: 0px;
  margin-top: 0px;
}

.ref-descr {
	font-size: 0.7em;
	margin: 0;
}

.teammember h4 {
  margin: 0px;
}

.teammember {
  padding: 0;
}

.teammember-text {
  padding: 5px;
  margin-left: 150px;
}

.teammember-image {
  margin-left: 5px;
  margin-top: 5px;
}

.client {
  border-bottom: 1px solid #0d96d5;
  padding: 5px;
  width: 100%;
  margin-top: 10px;
  display: inline-block;
  clear: left;
}

.clients article:last-child {
  border: none;
}

.client-image {
  max-width: 135px;
  float: left;
  margin-right: 10px;
  margin-bottom: 5px;
  display: inline-block;
}

.client .position {
  font-weight: bold;
  font-size: 0.9em;
  margin-bottom: 0px;
}

.client h4 {
  margin: 0px;
}

.client {
  padding: 0;
}

.client-text {
  padding: 5px;
}

.client-image {
  margin-left: 5px;
  margin-top: 5px;
  max-width: 10%;
}

.partner {
  border-bottom: 1px solid #0d96d5;
  padding: 5px;
  width: 100%;
  margin-top: 10px;
  display: inline-block;
  clear: left;
}

.partners article:last-child {
  border: none;
}

.partner-image {
  max-width: 135px;
  float: left;
  margin-right: 10px;
  margin-bottom: 5px;
  display: inline-block;
}

.partner .position {
  font-weight: bold;
  font-size: 0.9em;
  margin-bottom: 0px;
}

.partner h4 {
  margin: 0px;
}

.partner {
  padding: 0;
}

.partner-text {
  padding: 5px;
}

.partner-image {
  margin-left: 5px;
  margin-top: 5px;
  max-width: 10%;
}

@media (max-width: 649px) {
  .content {
    min-width: 200px;
    margin-top: 5px;
  }

  .sidebar {
    min-width: 100%;
    padding: 0;
    padding-bottom: 10px;
    margin: 0;
    float: none;
    border-right: none;
    border-bottom: 1px solid #0d96d5;
  }

  .sidebar a {
    min-width: 100%;
  }

  .logo {
    max-height: 100px;
    width: auto;
  }

  .logo_a h1 {
    font-size: 1em;
  }

  .sidebar .menu .menu_language {
    display: none;
  }

  .menu_main {
    display: inline-block;
  }

  .menu_social {
    display: inline-block;
  }

  .sidebar .copyright {
    display: none;
  }

  .mobile_footer {
    display: block;
    margin-top: 10px;
    padding-top: 10px;
    border-top: 1px solid #0d96d5;
  }

  .copyright {
    margin: 0;
    font-size: 12px;
    text-align: center;
  }

  .text {
    padding: 1em;
    margin: 0;
    margin-top: 10px;
    border: none;
  }

  .content {
    padding-bottom: 0;
  }
}

